# Internship-at-TEI

./: Araştırma Raporu.md  README.md  azure-pipeline.yml  azure-pipelines.yml  pipeline_entegrasyonu.md
project/: CMakeLists.txt
project/application/: CMakeLists.txt
project/application/commands/: commands.c  commands.h
project/application/main/: main.c
project/application/scheduler/: scheduler.c  scheduler.h
project/application/state_machine/: state_machine.c  state_machine.h
project/driver/: CMakeLists.txt
project/driver/gpio/: gpio.c  gpio.h
project/driver/timer/: timer.c  timer.h
project/driver/uart/: uart.c  uart.h
project/interfaces/: CMakeLists.txt  scheduler_interface.h  utils_interface.h
project/middleware/: CMakeLists.txt
project/middleware/auth_midware/: auth_midware.c  auth_midware.h
project/middleware/storage/: storage.c  storage.h
project/middleware/utils/: utils.c  utils.h
